# Bird

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.c
src/core/: bezier.c  bezier.h  canvas.c  canvas.h  ellipse.c  ellipse.h  matrix3d.c  matrix3d.h  shape.h
src/impl/: png_translation.c  png_translation.h  translation_state.h
test/: CMakeLists.txt  bezier.cpp
